# ComfyUI-Launcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENHANCED_MODEL_FINDER.md  INSTALLATION_IMPROVEMENTS.md  INTEGRATION_TEST_REPORT.md  ISSUE_8_PERFORMANCE_VALIDATION_SUMMARY.md  PERFORMANCE_REGRESSION_ANALYSIS.md  PRODUCTION_DEPLOYMENT_ASSESSMENT.md  REACT_HOOKS_FIXES.md  README.md  TESTING_README.md  TESTING_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  build_and_restart.sh  coverage.xml  critical_performance_optimization.py  final_performance_report.json  final_performance_validation.py  launcher.py  monitor_logs.sh  performance_optimization.py  performance_validation_report.json  pyproject.toml  recovery.db  restart_server.sh  run_performance_validation.py  run_recovery_tests.py  sample.env  simple_performance_validation.py  test_complete_workflow.sh  test_config.json  test_runner.sh
.claude/: CLAUDE.md
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/epics/app-recovery/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  epic.md
.claude/prds/: app-recovery.md
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 958a7ab4c84e_initial_recovery_tables.py
backend/src/: API_DOCUMENTATION.md  MODEL_FINDER_API.md  auto_model_downloader.py  celery_app.py  debug_helpers.py  frontend_integration_example.js  model_finder.py  progress_tracker.py  server.py  tasks.py  test_model_finder.py  utils.py
backend/src/recovery/: README.md  __init__.py  comfyui_operations.py  decorator.py  decorator_stub.py  download_manager.py  download_persistence.py  examples.py  examples_classification.py  examples_download.py  exceptions.py  installation.py  integration.py  integrations.py  performance.py  testing.py  types.py  verification.py  workflow_import.py
backend/tests/: test_utils.py
backend/tests/recovery/: test_classification.py  test_comprehensive_recovery.py  test_decorator.py  test_decorator_classification.py  test_end_to_end_scenarios.py  test_integration.py  test_integration_scenarios.py  test_performance_benchmarks.py  test_persistence.py  test_sqlalchemy_persistence.py  test_strategies.py
docs/: INTEGRATION_GUIDE_RECOVERY.md  RECOVERY_DOCUMENTATION_SUMMARY.md  TECHNICAL_ARCHITECTURE_RECOVERY.md  USER_GUIDE_RECOVERY.md
test_env/: pyvenv.cfg
web/: jest.config.cjs  package-lock.json  package.json  vitest.config.ts
web/src/components/: DownloadDashboard.tsx  ImportWorkflowUI.tsx  KeyboardShortcuts.tsx  LiveLogViewer.tsx  LogsViewer.tsx  MissingModelItem.tsx  ModelManager.tsx  Nav.tsx  ProjectCard.tsx  RecoveryBanner.tsx  RecoveryProgress.tsx  SettingsUI.tsx  StorageIndicator.tsx  WorkflowPreview.tsx  WorkflowsGridView.tsx  theme-toggle.tsx
web/src/hooks/: use-keyboard-shortcuts.ts  use-recovery-socket.ts
web/src/lib/: api.ts  socket.ts  types.ts  (+1 more)
(+28 files in other folders)
